--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-SQLAlchemy==2.4.4
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.1.1
+psycopg2==2.9.1
 psycopg2-binary==2.9.1
 SQLAlchemy==1.3.22
 Werkzeug==0.14.1
